# tp_homework

.github/workflows/: file.yml
task3/: CMakeLists.txt
task3/src/: CMakeLists.txt
task5/tests/: CMakeLists.txt
task5/tests/00-aplusb/: test.cpp
task5/tests/01-simple-library/: AddTestCase.cpp  AddTestCase.h  LeapTestCase.cpp  LeapTestCase.h
task5/tests/02-tree/: TreeTestCase.cpp  TreeTestCase.h
task5/tests/03-weather/: .WeatherTestCase.cpp.swp  WeatherMock.h  WeatherTestCase.cpp  WeatherTestCase.h
